Added Links the contact y practica

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>Martial Art</li>
         <li>Motorcycles</li>
       </ol>
-    
+    <a href="Contact me">Contact Me</a>
+    <a href="Practica-html.html">Practica</a>
 
 </body>
 </html>
