--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <li>Martial Art</li>
         <li>Motorcycles</li>
       </ol>
-    <a href="Contact me">Contact Me</a>
+      <hr>
+    <a href="Contact me">Contact Me</a><br>
     <a href="Practica-html.html">Practica</a>
 
 </body>
