--- a/Practica-html.html
+++ b/Practica-html.html
@@ -8,6 +8,7 @@
 </head>
    <body>
     <form>
+  <label for="name">Name</label>     
  <input type="text"><br>
  <input type="submit"><br>
  <input type="file"><br>
