ordered list numbers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li>El Secreto de Paco</ssdi>
     </ul>
     <h3>Mis Hobbies</h3>
-      <ol type="I">
+      <ol type="1">
         <li>Tomar</li>
         <li>Martial Art</li>
         <li>Motorcycles</li>
