--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onofre Personal Site</title>
 </head>
-<body>
+<body style="background-color: blue;">
     <img src="Pictures/Onof Photo.png" alt="cara desconocida">
     <h1>Onofre Salvador</h1>
     <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
