--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Onofre Personal Site</title>
 </head>
 <body style="background-color: #EAF6F6;">
-    <img src="Pictures/Onof Photo.png" alt="cara desconocida">
+    <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
     <h1>Onofre Salvador</h1>
     <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
     <p>I am a Web Developer. I💖 Programing and do make some jewerly </p> 
