--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onofre Personal Site</title>
+    <style>
+     body{
+      background-color: #EAF6F6;
+     }
+
+    </style>
 </head>
-<body style="background-color: #EAF6F6;">
+<body>
     <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
     <h1>Onofre Salvador</h1>
     <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
-    <p>I am a Web Developer. I💖 Programing and do make some jewerly </p> 
+    <p>I am a Web Developer. I ❤ Programing and do make some jewerly </p> 
     <hr>
     <h3>Books and Teaching</h3>   
     <ul>
