--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
      body{
       background-color: #EAF6F6;
      }
+     hr{
+      background-color: white;
 
+     }
     </style>
 </head>
 <body>
