--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
     <h1>Onofre Salvador</h1>
     <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
-    <p>I am a Web Developer. I ❤ Programing and do make some jewerly </p> 
+    <p>I am a Web Developer. I 🧡 Programing and do make some jewerly </p> 
     <hr>
     <h3>Books and Teaching</h3>   
     <ul>
