--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Onofre Personal Site</title>
-    <style>
-     body{
+  <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Onofre Personal Site</title>
+  <style>
+    body {
       background-color: #EAF6F6;
-     }
-     hr{
+    }
+
+    hr {
       background-color: white;
 
-     }
-    </style>
+    }
+  </style>
 </head>
+
 <body>
-    <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
-    <h1>Onofre Salvador</h1>
-    <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
-    <p>I am a Web Developer. I 🧡 Programing and do make some jewerly </p> 
-    <hr>
-    <h3>Books and Teaching</h3>   
-    <ul>
-        <li>La Gran mentira</li>
-        <li>El Secreto de Paco</ssdi>
-    </ul>
-    <h3>Mis Hobbies</h3>
-      <ol type="1">
-        <li>Tomar</li>
-        <li>Martial Art</li>
-        <li>Motorcycles</li>
-      </ol>
-      <hr>
-    <a href="Contact me">Contact Me</a><br>
-    <a href="Practica-html.html">Practica</a>
+  <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
+  <h1>Onofre Salvadore</h1>
+  <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
+  <p>I am a Web Developer. I 🧡 Programing and do make some jewerly </p>
+  <hr>
+  <h3>Books and Teaching</h3>
+  <ul>
+    <li>La Gran mentira</li>
+    <li>El Secreto de Paco</ssdi>
+  </ul>
+  <h3>Mis Hobbies</h3>
+  <ol type="1">
+    <li>Tomar</li>
+    <li>Martial Art</li>
+    <li>Motorcycles</li>
+  </ol>
+  <hr>
+  <a href="Contact me">Contact Me</a><br>
+  <a href="Practica-html.html">Practica</a>
 
 </body>
+
 </html>
