cambio de regreso

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
   <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
-  <h1>Onofre Salvadore</h1>
+  <h1>Onofre Salvador</h1>
   <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
   <p>I am a Web Developer. I 🧡 Programing and do make some jewerly </p>
   <hr>
