--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 
     hr {
       background-color: white;
+      border-style: none;
+    
+     }
+    </style>
+
 
     }
   </style>
+
 </head>
 
 <body>
