red border color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Onofre Personal Site</title>
   <style>
     body {
+      border-color: crimson;
       background-color: #EAF6F6;
     }
 
