--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <style>
     body {
       border-color: crimson;
+      border-top: 0em 10 palevioletred;
       background-color: #EAF6F6;
     }
 
