--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       border-color: crimson;
       border-top: 0em 10 palevioletred;
-      background-color: #EAF6F6;
+      background-color: #9fe7e7;
     }
 
     hr {
