--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       background-color: white;
       border-style: none;
       height: 2px;
-      width: 100px;
+      width: 30%;
      }
     </style>
 
