--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     hr {
       background-color: white;
-      border-style: dotted;
+      border-style: dotted solid;
       height: 2px;
       width: 30%;
      }
