--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     hr {
       background-color: white;
-      border-style: dotted solid;
-      height: 2px;
+      border-style: dotted ;
+      height: 0px;
       width: 30%;
      }
     </style>
