--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     hr {
       background-color: white;
       border-style: dotted none none none;
-    
+      border-color: blue;
+      border-width: 10px;
       width: 30%;
      }
     </style>
