--- a/Practica-html.html
+++ b/Practica-html.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="Css/styles.css">
    
    
     <title>Document</title>
