--- a/index.html
+++ b/index.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Angela's Personal Site</title>
+    <link rel="stylesheet" href="/css/styles.css">
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Onofre Personal Site</title>
-  <link rel="stylesheet" href="Css/styles.css">
-</head>
-
-<body>
-  <img src="Pictures/Onof Photo-modified.png" alt="cara desconocida">
-  <h1>Onofre Salvador</h1>
-  <p><em>Founder of <strong>Portafolio Insurance</strong>.</em></p>
-  <p>I am a Web Developer. I 🧡 Programing and do make some jewerly </p>
-  <hr>
-  <h3>Books and Teaching</h3>
-  <ul>
-    <li>La Gran mentira</li>
-    <li>El Secreto de Paco</ssdi>
-  </ul>
-  <hr>
-  <h3>Mis Hobbies</h3>
-  <ol type="1">
-    <li>Tomar</li>
-    <li>Martial Art</li>
-    <li>Motorcycles</li>
-  </ol>
-  <hr>
-  <a href="Contact me">Contact Me</a><br>
-  <a href="Practica-html.html">Practica</a>
-
-</body>
-
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/angela.png" alt="angela profile picture"></td>
+        <td><h1>Angela Yu</h1>
+        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+      </tr>
+    </table>
+    <hr>
+    <h3>Books and Teaching</h3>
+    <ul>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2009-2010</td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+        </tr>
+        <tr>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
+        </tr>
+        <tr>
+          <td>2013-2015</td>
+          <td>Clinical Doctor at the National Health Service</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 </html>
