--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body style="background-color: white">
     <table cellspacing="20">
       <tr>
-        <td><img src="images/angela.png" alt="angela profile picture"></td>
-        <td><h1>Angela Yu</h1>
+        <td><img src="Pictures/Onof Photo-modified.png" alt="angela profile picture"></td>
+        <td><h1>Onofre Salvador</h1>
         <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
         <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
       </tr>
