--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Angela's Personal Site</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="Css/styles.css">
   </head>
 
   <body style="background-color: white">
