--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="Css/styles.css">
   </head>
 
-  <body style="background-color: white">
+  <body>
     <table cellspacing="20">
       <tr>
         <td><img src="Pictures/Onof Photo-modified.png" alt="angela profile picture"></td>
